# api-error-handler-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
.sdk/def/: api-error-handler_0.1.0.json
.sdk/model/: sdk.aontu  sdk.json  sdk.jsonic
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  api-error-handler.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
go/core/: api-error-handler_sdk.go  config.go  context.go  error.go  helpers.go  operation.go  registry.go  response.go  result.go  target.go  types.go
go/entity/: logo_generation_entity.go  types.go
go/feature/: audit_feature.go  base_feature.go  cache_feature.go  clienttrack_feature.go  debug_feature.go  idempotency_feature.go  log_feature.go  metrics_feature.go  netsim_feature.go  paging_feature.go  proxy_feature.go  ratelimit_feature.go  rbac_feature.go  retry_feature.go  streaming_feature.go  telemetry_feature.go  test_feature.go  timeout_feature.go
go/test/: custom_utility_test.go  exists_test.go  feature_test.go  logo_generation_direct_test.go  logo_generation_entity_test.go  netsim_test.go  pipeline_test.go  primary_utility_test.go  runner_test.go  struct_runner_test.go  struct_utility_test.go
go/utility/: clean.go  done.go  feature_add.go  feature_hook.go  feature_init.go  fetcher.go  make_context.go  make_error.go  make_fetch_def.go  make_options.go  make_point.go  make_request.go  make_response.go  make_result.go  make_spec.go  (+15 more)
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  api-error-handler.rockspec  api-error-handler_sdk.lua  api-error-handler_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  apierrorhandler_sdk.php  composer.json  config.php  features.php
py/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  apierrorhandler_sdk.py  apierrorhandler_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  error.py  helpers.py  operation.py  response.py  result.py  utility_type.py
py/entity/: logo_generation_entity.py
py/feature/: audit_feature.py  clienttrack_feature.py  idempotency_feature.py  metrics_feature.py  netsim_feature.py  paging_feature.py  ratelimit_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_logo_generation_direct.py  test_logo_generation_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_body.py  prepare_params.py  prepare_path.py  result_body.py
rb/: AGENTS.md  ApiErrorHandler_sdk.gemspec  ApiErrorHandler_sdk.rb  ApiErrorHandler_types.rb  CLAUDE.md  README.md  REFERENCE.md  config.rb  features.rb
ts/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  package-lock.json  package.json
(+311 files in other folders)
